test/files/errors/syntaxError.jg
_main int ()
{
    32
}